# ManifoldUKF

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake/: FindEigen3.cmake  FindSophus.cmake
config/: estimator-config.yaml
include/: Constants.hpp  Estimator.hpp  State.hpp
include/kalman/: BaseUpdate.hpp  Extrinsics.hpp  History.hpp  Prediction.hpp  UnscentedTransform.hpp
include/kalman/updates/: GlobalUpdate.hpp  LidarUpdate.hpp  PlanefitUpdate.hpp
include/measurements/: GlobalUpdateMeasurement.hpp  ImuMeasurement.hpp  LidarMeasurement.hpp  Measurement.hpp  PlaneFitMeasurement.hpp  VisualOdometry.hpp
include/yaml_matrix/: yaml_matrix.hpp
source/: CMakeLists.txt  Estimator.cpp  State.cpp
source/kalman/: Extrinsics.cpp  History.cpp  Prediction.cpp
source/kalman/updates/: GlobalUpdate.cpp  LidarUpdate.cpp  PlanefitUpdate.cpp
source/measurements/: GlobalUpdateMeasurement.cpp  ImuMeasurement.cpp  LidarMeasurement.cpp  PlaneFitMeasurement.cpp
tests/: CMakeLists.txt  HistoryTest.cpp  LidarTest.cpp  PlaneFitTest.cpp  PredictionTest.cpp  StateTest.cpp  TestHelpers.cpp  TestHelpers.hpp  UnscentedTransformTest.cpp
